# restful/internal/types/types.go
@@ -1,14 +1,11 @@
 // Code generated by goctl. DO NOT EDIT.
 package types
 
-type UserLogoutRep struct {
-}
+type UserLogoutRep struct{}
 
-type UserLogoutResp struct {
-}
+type UserLogoutResp struct{}
 
-type OssInfoRep struct {
-}
+type OssInfoRep struct{}
 
 type OssInfoResp struct {
 	BucketURL string `json:"bucketURL"`
@@ -54,8 +51,7 @@ type InsertScreenProjectDataReq struct {
 	Content   string `form:"content"`
 }
 
-type InsertScreenProjectDataResp struct {
-}
+type InsertScreenProjectDataResp struct{}
 
 type ScreenProjectDataByIDReq struct {
 	ProjectId int64 `form:"projectId"` // 大屏信息ID
@@ -108,23 +104,20 @@ type UpdateScreenProjectReq struct {
 	Remark   *string `json:"remarks,optional"`     //  备注
 }
 
-type UpdateScreenProjectResp struct {
-}
+type UpdateScreenProjectResp struct{}
 
 type UpdateScreenProjectPublishReq struct {
 	Id    int64 `json:"id"`    //  ID
 	State int64 `json:"state"` //  发布状态(-1 未发布  1 已发布)
 }
 
-type UpdateScreenProjectPublishResp struct {
-}
+type UpdateScreenProjectPublishResp struct{}
 
 type DelScreenProjectReq struct {
 	Ids int64 `form:"ids"` //  ID
 }
 
-type DelScreenProjectResp struct {
-}
+type DelScreenProjectResp struct{}
 
 type SelectScreenProjectListReq struct {
 	Page  int64 `form:"page"`  //  页码
